# NavMesh-Generation

./: README.md
NavMeshGeneration/Project/: CMakeLists.txt  main.cpp
NavMeshGeneration/Project/AI/NavMesh/: NavMesh.cpp  NavMesh.h  NavMeshGenerator.cpp  NavMeshGenerator.h  NavMeshStructs.h  PathFinder.cpp  PathFinder.h  PathfindingStructs.h
NavMeshGeneration/Project/PhysicsGame/: Camera.h  MathHelpers.h  Utils.h
NavMeshGeneration/Project/PhysicsGame/Collision/: AABBCalculator.cpp  AABBCalculator.h  CollisionFixer.cpp  CollisionFixer.h
NavMeshGeneration/Project/PhysicsGame/Components/DerivedComponents/: AIMovementComponent.cpp  AIMovementComponent.h  CameraComponent.cpp  CameraComponent.h  CollisionComponent.cpp  CollisionComponent.h  MovementComponent.cpp  MovementComponent.h  MovingObjectComponent.cpp  MovingObjectComponent.h  TransformGizmoComponent.cpp  TransformGizmoComponent.h
NavMeshGeneration/Project/PhysicsGame/Meshes/: Mesh.cpp  Mesh.h
NavMeshGeneration/Project/Resources/objs/Balcony/: Balcony_Cover.fbx  Balcony_Cover_Corner.fbx  Balcony_Rope.fbx  Balcony_RopePod.fbx
NavMeshGeneration/Project/Resources/objs/BigPipes/: BigPipes_Bend.fbx  BigPipes_Hole.fbx  BigPipes_Straight.fbx
NavMeshGeneration/Project/Resources/objs/Ceiling/: Ceiling_Roof.fbx  Ceiling_Segment.fbx  Ceiling_Side.fbx  Ceiling_SlantedSides.fbx  Ceiling_SlantedSides_Mirrored.fbx  Ceiling_Splitter_Big.fbx  Ceiling_Splitter_Small.fbx
NavMeshGeneration/Project/Resources/objs/Covers/: Cover_01.fbx  Cover_02.fbx  Cover_02_Connector_Bottom.fbx  Cover_02_Connector_Top.fbx  Cover_02_Nose.fbx  Cover_02_Side_Bottom.fbx  Cover_02_Side_Top.fbx
NavMeshGeneration/Project/Resources/objs/CubbyHole/: LightCylinder.fbx  Light_Beam.fbx  Light_Cap.fbx
NavMeshGeneration/Project/Resources/objs/Door/: Door.mtl
NavMeshGeneration/Project/Resources/objs/Floors/: Floor_GroundLights.fbx
NavMeshGeneration/Project/Resources/objs/Lights/: Light_01.fbx
NavMeshGeneration/Project/Resources/objs/Misc/: ControlPanel.fbx  Engine.fbx  LootCylinder.fbx  LootItems.fbx
NavMeshGeneration/Project/Resources/objs/Pillars/: Pillar_01.fbx  Pillar_02.fbx  Pillar_02_Wall.fbx
NavMeshGeneration/Project/Resources/objs/Railings/: Railing_01.fbx  Railing_02.fbx
NavMeshGeneration/Project/Resources/objs/Stairs/: Stairs_01.fbx
NavMeshGeneration/Project/Resources/objs/Tables/: Table_Foot.fbx  Table_Screen.fbx  Table_Top_Big.fbx  Table_Top_Small.fbx  Table_XFull_Temp.fbx
NavMeshGeneration/Project/Resources/objs/WallPieces/: WallPiece_01_Full.fbx  WallPiece_01_Mid.fbx  WallPiece_01_Top.fbx  WallPiece_02_Full.fbx  WallPiece_02_Mid.fbx  WallPiece_02_Top.fbx
NavMeshGeneration/Project/Resources/objs/Walls/: WallTile_01.fbx  WallTile_02.fbx  WallTile_02_5x5.fbx  Wall_01.fbx  Wall_01_E.fbx  Wall_02.fbx  Wall_Side.fbx
NavMeshGeneration/Project/Resources/objs/Windows/: Window_Bank.fbx  Window_Encasing.fbx  Window_Glass.fbx
NavMeshGeneration/Project/Resources/shaders/: shader3D.frag  shader3D.vert
NavMeshGeneration/Project/VulkanBase/: VulkanBase.h  VulkanLoad.cpp
NavMeshGeneration/Project/VulkanBase/EventSystem/: Events.h  Observer.h
NavMeshGeneration/Project/VulkanBase/HelperStructs/: BaseComponent.h  HelperStructs.h  IRenderable.h  PipelinesEnum.h  VertexInfo.h
NavMeshGeneration/Project/VulkanBase/Implementations/: BufferHelpers.cpp  RuntimeFunctions.cpp
NavMeshGeneration/Project/VulkanBase/Implementations/Initialization/: CommandBufferInit.cpp  DepthBufferingInit.cpp  DescriptorInit.cpp  InstanceInit.cpp  LogicalDeviceInit.cpp  PhysicalDeviceInit.cpp  PipelineInit.cpp  SemaphoresFencesInit.cpp  SwapChainInit.cpp  TextureInit.cpp  (+1 more)
NavMeshGeneration/Project/VulkanBase/Materials/: Material.h
NavMeshGeneration/Project/VulkanBase/Scene/: Object.h  Scene.h  Singleton.h
NavMeshGeneration/Project/VulkanBase/Shaders/: Shader.h
NavMeshGeneration/Project/VulkanBase/Time/: Time.cpp  Time.h
NavMeshGeneration/Project/VulkanUtil/: VulkanUtil.cpp  VulkanUtil.h
(+3 files in other folders)
